--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,15 @@
 name: transformer_test
-version: 0.2.1+1
+version: 0.2.1+2
 description: A library which helps with writing tests for transformers.
 author: Dart Team <misc@dartlang.org>
 homepage: https://github.com/dart-lang/transformer_test
 
 environment:
-  sdk: '>=1.0.0 <2.0.0'
+  sdk: '>=1.8.0 <2.0.0'
 
 dependencies:
   barback: '>=0.14.2 <0.16.0'
   code_transformers: '>=0.4.0 <0.6.0'
   path: '>=0.9.0 <2.0.0'
-  test: '>=0.12.1 <0.13.0'
+  test: ^0.12.1
+  stack_trace: ^1.7.3
